# brave-core

./: package-lock.json  package.json
android/: brave_java_sources.gni
browser/: brave_browser_process_impl.cc  brave_content_browser_client.cc  brave_profile_prefs.cc  sources.gni
browser/brave_wallet/: BUILD.gn
browser/debounce/: debounce_browsertest.cc
browser/extensions/: BUILD.gn
browser/extensions/api/: brave_rewards_api.cc
browser/ipfs/: ipfs_tab_helper.cc  ipfs_tab_helper_browsertest.cc
browser/ipfs/test/: BUILD.gn
browser/net/: brave_ad_block_tp_network_delegate_helper.cc  decentralized_dns_network_delegate_helper.cc
browser/ui/: BUILD.gn
browser/ui/webui/: brave_rewards_page_ui.cc  brave_webui_source.cc
chromium_src/components/qr_code_generator/: dino_image.h
chromium_src/components/renderer_context_menu/: render_view_context_menu_base.h
chromium_src/net/base/: features.cc
chromium_src/net/cookies/: cookie_monster.cc  cookie_options.cc  cookie_options.h
chromium_src/net/url_request/: url_request_http_job.cc
chromium_src/services/network/: network_service_network_delegate.cc  (+1 more)
components/brave_federated_learning/: BUILD.gn  trace_collection_service.cc  trace_collection_service.h
components/decentralized_dns/: constants.h
components/definitions/: newTab.d.ts  rewards.d.ts
components/ipfs/: ipfs_service.cc  ipfs_utils.cc  ipfs_utils.h  ipfs_utils_unittest.cc
components/resources/: brave_components_strings.grd
patches/: components-content_settings-core-common-cookie_settings_base.h.patch
test/: BUILD.gn
(+48 files in other folders)
