import("//build/buildflag_header.gni")

source_set("brave_trace_collection") {
  sources = [
    "trace_collection_service.cc",
    "trace_collection_service.h",
  ]

  deps = [
    "//base",
    "//brave/components/brave_stats/browser",
    "//brave/components/version_info",
    "//brave/vendor/brave_base",
    "//components/metrics",
    "//components/prefs",
    "//content/public/browser",
    "//content/public/common",
    "//services/network/public/cpp",
    "//services/network/public/mojom",
    "//url",
  ]
}
